--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "http-errors": "^1.8.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "redis": "^3.1.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
